fixed weird card stretch

--- a/CSS/salamanderPort.css
+++ b/CSS/salamanderPort.css
@@ -80,7 +80,7 @@ body{
     box-sizing: border-box;
     padding: 20px;
     margin-bottom: 50px;
-    background-image: linear-gradient(forestgreen, goldenrod);
+    background-color: grey;
 }
 #pic{
     display: flex;
@@ -113,27 +113,18 @@ body{
     padding: 20px;
     background-color: forestgreen;
 }   
-.img1:hover {
-    width: 370px;
-    height: 250px;
-    position:relative;
-    display:block;
-    z-index: index 20;;
-}
-.sunImg{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    box-sizing: border-box;
-}
-.horses {
-    margin: 0 auto;
-    width: 1000px;
-    height: 600px;
-}
+#projectCardRow{
+    .column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
+      }
+      
+      /* Clear floats after image containers */
+      .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
 
-.w-100 {
-    margin: 0 auto;
-    width: 1000px;
-    height: 600px;  
 }
